# visitor_system

./: .gitignore  README.md  pyproject.toml
src/: Makefile  manage.py
src/config/: asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: base.py  local.py  production.py
src/project/employees/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/project/employees/fixtures/: specialist_days.yaml
src/project/employees/migrations/: 0001_initial.py  0002_specialisttypes_description.py
src/project/employees/templatetags/: employee_extras.py
src/project/static/css/: project.css
src/project/static/js/: dal_init_funcs.js  i18n.js  pagination.js  project.js  utils.js
src/project/static/js/modules/fullcalendar@6_1_11/: locales-all.global.min.js
src/project/static/js/modules/gauntface/logger/: browser-globals.js  browser-globals.js.map
src/project/static/js/modules/pdf-viewer/css/: pdfviewer.jquery.css
src/project/static/js/modules/pdf-viewer/js/: pdfviewer.jquery.js
src/project/templates/: base.html
src/project/templates/employees/: employees_create_view.html  employees_list_view.html
src/project/utils/: __init__.py  funcs.py  md.py  slugify.py
src/project/utils/admin/: utils.py
src/project/utils/commands/: decorators.py
src/project/utils/enum/: Enum.py  __init__.py
src/project/utils/forms/: fields.py
src/project/utils/mixins/: premissions.py
src/project/utils/models/: __init__.py  models.py
src/project/utils/types/: __init__.py  classes.py
src/project/visitors/: admin.py  apps.py  forms.py  managers.py  models.py
src/project/visitors/migrations/: 0001_initial.py  0002_alter_visitor_children.py  0002_child_parent_visitor_reason_for_request.py
src/project/visits/: admin.py  apps.py  forms.py  models.py
src/project/visits/migrations/: 0001_initial.py  0002_alter_visits_options_remove_visits_datetime_and_more.py  0003_remove_visits_time_visit_timevisits_time_visit.py  0004_remove_timevisits_time_visit_visits_time_visit.py  0005_visits_session_visits_type_visit.py  0006_visits_visits_count.py  0007_completedsession_visits_completed_sessions.py
